# TrafficSim

./: .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Makefile  update_makefile_n_clean.sh
include/: Car.h  Junction.h  Lane.h  RedTrafficLight.h  Road.h  Scenario.h  TrafficObject.h  Visualization.h  register_algorithms.h
include/algorithms/: AdvanceAlgorithm.h  OpenMPAlgorithm.h  SequentialAlgorithm.h
include/by_id/: Car.h  Junction.h  Lane.h  RedTrafficLight.h  Road.h  Scenario.h  ScenarioData.h  TrafficObject.h  Visualization.h
include/by_id/algorithms/: AdvanceAlgorithm.h  CudaAlgorithm.h  cuda_algorithms.cuh
include/by_id/cuda/: traffic_object.cu
main/include/: TrafficSim.h  generate_scenario.h
main/include/util/: SimpleArgumentParser.h  register_algorithms.h
main/src/: TrafficSim.cpp  generate_scenario.cpp  generate_scenario.cu  main.cpp
main/src/test/: benchmark.cpp  compare_algorithms.cpp  test_json.cpp
main/src/util/: SimpleArgumentParser.cpp  cuda_info.cu
ownTests/: visioTest.json
scenario_base/: CMakeLists.txt
scenario_base/include/: AdvanceAlgorithm.h  BaseScenario.h  BaseVisualizationEngine.h
scenario_base/include/optimization/: BaseOptimizer.h
scenario_base/src/: AdvanceAlgorithm.cpp  BaseOptimizer.cpp
scenario_id/: CMakeLists.txt
scenario_id/include/: AlgorithmWrapper.h  Car_id.h  Junction_id.h  Lane_id.h  PreScan.h  RedTrafficLight_id.h  Road_id.h  ScenarioData_id.h  Scenario_id.h  SortBuffer.h  SortedBucketContainer.h  TrafficObject_id.h  Visualization_id.h  cudacontainer.h
scenario_id/include/algorithms/: AlgorithmWrapper.h  CudaAlgorithm.h  CudaAlgorithm2_id.h  CudaAlgorithm_id.h  OpenMPAlgorithm_id.h  SequentialAlgorithm_id.h  SequentialCudaDataAlgorithm_id.h  TestAlgo.h  cuda_algorithms.cuh
scenario_id/include/cuda/: cuda_utils.h
scenario_id/include/cuda_utils/: SortBuffer.h  SortedBucketContainer.h  cuda_utils.h
scenario_id/include/model/: Car_id.h  Junction_id.h  Lane_id.h  RedTrafficLight_id.h  Road_id.h  Scenario_id.h  TrafficObject_id.h
scenario_id/src/: AlgorithmWrapper.cu  Car_id.cpp  Junction.cpp  Lane.cpp  PreScan.cu  RedTrafficLight_id.cpp  Road_id.cpp  Scenario.cpp  SortBuffer.cu  SortedBucketContainer.cu  TrafficObject.cpp  Visualization.cpp  cuda_utils.cu  cudacontainer.cu  main.cpp  mmmm.cpp
scenario_id/src/algorithms/: AlgorithmWrapper.cu  CudaAlgorithm.cpp  CudaAlgorithm.cu  CudaAlgorithm2_id.cu  OpenMPAlgorithm_id.cpp  SequentialAlgorithm_id.cpp  SequentialCudaDataAlgorithm_id.cpp  TestAlgo.cu  cuda_algorithms.cu
scenario_id/src/cuda_utils/: PreScan.cu  SortBuffer.cu  SortedBucketContainer.cu  cuda_utils.cu
scenario_id/src/model/: Scenario_id.cpp
scenario_ref/: CMakeLists.txt
scenario_ref/include/: Car.h  InteligentDriverModel.h  IntelligentDriverModel.h  Lane.h  LaneChangeModel.h  NeighborFinder.h  Road.h  TrafficObject.h  Visualization.h
scenario_ref/include/algorithms/: OpenMPAlgorithm.h  RefAlgorithm.h  SequentialAlgorithm.h
scenario_ref/include/model/: Car.h  Junction.h  Lane.h  RedTrafficLight.h  Road.h  Scenario.h  TrafficLight.h  TrafficObject.h
scenario_ref/include/optimization/: BaseOptimizer.h  DistributionOpenMPOptimizer.h  DistributionOptimizer.h  GeneticOptimizer.h  ParallelRandomOptimizer.h  RandomOptimizer.h  SequentialRandomOptimizer.h
scenario_ref/include/optimization/model/: OptimizeScenario.h  SignalLayout.h
scenario_ref/src/: Car.cpp  InteligentDriverModel.cpp  IntelligentDriverModel.cpp  Junction.cpp  Lane.cpp  LaneChangeModel.cpp  NeighborFinder.cpp  RedTrafficLight.cpp  Road.cpp  Scenario.cpp  TrafficObject.cpp  Visualization.cpp
scenario_ref/src/algorithms/: OpenMPAlgorithm.cpp  SequentialAlgorithm.cpp  road_neigboring_lanes.cpp
scenario_ref/src/model/: Car.cpp  Junction.cpp  Lane.cpp  RedTrafficLight.cpp  Road.cpp  Scenario.cpp  TrafficLight.cpp  TrafficObject.cpp
scenario_ref/src/optimization/: BaseOptimizer.cpp  DistributionOpenMPOptimizer.cpp  DistributionOptimizer.cpp  GeneticOptimizer.cpp  ParallelRandomOptimizer.cpp  RandomOptimizer.cpp  SequentialRandomOptimizer.cpp
scenario_ref/src/optimization/model/: OptimizeScenario.cpp  SignalLayout.cpp
scripts/: generate_scenario.py
src/: Car.cpp  Junction.cpp  Lane.cpp  RedTrafficLight.cpp  Road.cpp  Scenario.cpp  TrafficObject.cpp  Visualization.cpp  benchmark.cpp  compare_algorithms.cpp  main.cpp  test_json.cpp
src/algorithms/: AdvanceAlgorithm.cpp  OpenMPAlgorithm.cpp  SequentialAlgorithm.cpp
src/by_id/: Car.cpp  Junction.cpp  Lane.cpp  RedTrafficLight.cpp  Road.cpp  Scenario.cpp  TrafficObject.cpp  Visualization.cpp  main.cpp
src/by_id/algorithms/: AdvanceAlgorithm.cpp  CudaAlgorithm.cpp  OpenMPAlgorithm.cpp  SequentialAlgorithm.cpp  cuda_algorithms.cu
src/test/: benchmark.cpp  test_json.cpp
src/util/: Visualization.cpp
tests/: 17-1car_signal.json  17-1car_signal.json.sol  25-2two_cars_before_lane_change.json  30-cars_change_to_same_lane_one_car_faster.json  30-cars_change_to_same_lane_one_car_faster.json.sol  31-cars_change_to_same_lane.json  31-cars_change_to_same_lane.json.sol  35-lane_change_after_junction.json  35-lane_change_after_junction.json.sol  36-lane_change_after_junction_same_lane.json  36-lane_change_after_junction_same_lane.json.sol  40-cars_correct_turning.json  40-cars_correct_turning.json.sol  42-tiny_100timestep.json  42-tiny_100timestep.json.sol  42-tiny_100timestep_optimize.json  42-tiny_10timestep_optimize.json  44-tiny_400timestep.json  44-tiny_400timestep.json.sol  44-tiny_400timestep_optimize.json
tests/own_tests/: 16x16.json  16x16.json.sol  32x32.json.sol  32x32_many_cars.json.sol  4x4.json  4x4.json.sol  4x4_1000_optimize.json  4x4_100_optimize.json  64x64.json.sol  visioTest.json
